# fronius_meter_emulation

./: .env.template  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build_docker_image.yaml  rust_ci.yaml
src/: data_fetcher.rs  home_assistant.rs  home_assistant_reader.rs  lib.rs  main.rs  power_combiner.rs  rolling_average.rs  shelly_3em_client.rs  shelly_reader.rs  smart_meter_emulator.rs  threaded_data_coordinator.rs
tests/: integration_test.rs
