[package]
name = "fronius_meter_emulation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
reqwest = { version = "0.12.7", features = [
    "json",
    "gzip",
    "deflate",
], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["time"], default-features = true }
tokio-modbus = { version = "0.14.0", features = [
    "server",
    "tcp",
    "tcp-server",
] }
tracing-subscriber = "0.3.18"
