[package]
name = "fronius_meter_emulation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
reqwest = { version = "0.12.14", features = [
    "json",
    "gzip",
    "deflate",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.44", features = ["time"], default-features = true }
tokio-modbus = { version = "0.16.1", features = [
    "server",
    "tcp",
    "tcp-server",
] }
tracing-subscriber = "0.3.19"
