[package]
name = "fronius_meter_emulation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "deflate",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.44", features = ["time"], default-features = true }
tokio-modbus = { version = "0.17", features = [
    "server",
    "tcp",
    "tcp-server",
] }
tracing-subscriber = "0.3"

[dev-dependencies]
mockito = "1.7.0"

[profile.release]
lto = true
strip = true    # Automatically strip symbols from the binary.
panic = "abort"
